--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "next": "13.1.2",
+    "next-api-decorators": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
