--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eslint": "8.32.0",
@@ -23,6 +24,7 @@
     "next-api-decorators": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.0",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
   },
