feat: add stripe checkout api

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# App
+APP_NAME=
+APP_VERSION=
+APP_BASE_URL=
+
+# Stripe
+STRIPE_SECRET_KEY=
+
 # Firebase
 FIREBASE_DATABASE_URL=
 FIREBASE_CREDENTIAL=
