--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "class-validator": "^0.14.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
-    "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "next": "13.1.2",
     "next-api-decorators": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^11.6.0",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
