--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ STRIPE_WEBHOOK_SECRET=
 # Firebase
 FIREBASE_DATABASE_URL=
 FIREBASE_CREDENTIAL=
+
+# Mail
+SMTP_FROM_EMAIL=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
