feat: install sentry

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
+
+# Sentry
+SENTRY_AUTH_TOKEN=
+SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_DSN=
+SENTRY_ORG=
+SENTRY_PROJECT=
